[package]
name = "chrome_login_capture"
version = "0.1.0"
authors = ["Dennis Kievits"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
headless_chrome = "0.9.0"
failure = "0.1.5"
reqwest = "0.9.20"
serde_json = "1.0.40"
