[package]
name = "chrome_login_capture"
version = "0.1.1"
authors = ["Dennis Kievits"]
edition = "2018"
license = "MIT"
description = "Opens a controlled chrome instance that allows the controller to capture e.g. login tokens."
repository = "https://github.com/elertan/chrome_login_capture"
keywords = ["chrome", "login", "capture", "token", "captcha"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
headless_chrome = "0.9.0"
failure = "0.1.5"
reqwest = "0.9.20"
serde_json = "1.0.40"
