[package]
name = "amino_login"
version = "0.1.0"
authors = ["Dennis Kievits <denkievits@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrome_login_capture = { path = "../../" }
serde = "1.0.101"
serde_derive = "1.0.101"
serde_json = "1.0.40"
reqwest = "0.9.20"
failure = "0.1.5"
